Sun Mar  9 19:18:48 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/reloc.c (Reloc_SplitRelocAndAddend): Fail during pass one when
	there would be relocation symbol not yet defined/declared.
	* src/reloc.h (RelocAndAddend_t): Fix comments.
	* unittests/compare/core/operator_base_index.s: Add test case.

Sun Mar  9 19:14:35 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/reloc.c (Reloc_GetRawRelocData): Fix mask value in assert.

Sun Mar  9 18:46:15 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/aoffile.h (HOW2_*): Update comments.

Sun Mar  9 18:33:20 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/lit.c (DEBUG_LIT): Fix build.

Thu Feb 27 02:15:48 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpuctrl.c (m_adr): Better support for expression which can
	not yet evaluated during pass one.
	* unittests/compare/core/include/adr.s: Add extra test case.

Tue Feb 25 03:43:08 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/eval.c (GetInt): Support absolute area labels.
	* unittests/compare/core/org_label.s: Add.

Tue Feb 25 03:02:44 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/eval.c (Eval_Unop): Support 1 character string and symbol
	for unary +.  Support 1 character string for :INDEX:.

Sun Feb 23 19:37:37 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/symbol.c (Symbol_Print): Fix DEBUG build.

Sun Feb 23 19:07:06 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/error.c (errorCore): Flush stdout first.
	(errorCoreLine): Likewise.

Sun Feb 23 17:49:42 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* common.h: Include string.h when strndup or strdup is available.
	Include strings.h when strncasecmp is available.
	Drop include config.h.
	* directive_data.h: Drop include config.h.
	* global.h: Likewise.
	* help_cpu.h: Likewise.
	* lex.h: Likewise.
	* m_cpumem.h: Likewise.
	* os.h: Likewise.
	* output.h: Likewise.
	* reloc.h: Likewise.

Wed Feb 12 02:05:03 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
